--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.charles.myapplication.MainActivity">
+    tools:context="com.charles.myapplication.main.activity.MainActivity">
 
     <TextView
         android:id="@+id/tv_text"
